--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MotteMentor - Soutien Scolaire</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        header {
-            background-color: #0073e6;
-            color: white;
-            padding: 20px;
-        }
-        section {
-            padding: 20px;
-        }
-        .cta {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #0073e6;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>MOTTETMENTOR</h1>
-        <p>Votre partenaire de confiance pour le soutien scolaire</p>
-    </header>
-    <section>
-        <h2>Pourquoi choisir MotteMentor ?</h2>
-        <p>Nous proposons un accompagnement personnalisé pour aider les élèves de tous âges à réussir.</p>
-        <a href="#" class="cta">Contactez-nous</a>
-    </section>
-</body>
-</html>
+<svg width="500" height="300" viewBox="0 0 500 300" xmlns="http://www.w3.org/2000/svg">
+  <!-- Fond -->
+  <rect width="500" height="300" fill="white" />
+
+  <!-- Tableau (représenté en fond sombre) -->
+  <rect x="250" y="30" width="200" height="150" fill="#34495e" rx="10" ry="10"/>
+  
+  <!-- Règle 3D sur le tableau -->
+  <!-- Règle principale -->
+  <rect x="270" y="60" width="150" height="15" fill="#ecf0f1"/>
+  <!-- Effet 3D : une ombre pour simuler la profondeur -->
+  <polygon points="420,60 435,55 435,70 420,75" fill="#bdc3c7"/>
+
+  <!-- Professeur -->
+  <!-- Tête -->
+  <circle cx="100" cy="80" r="30" fill="#f1c40f"/>
+  <!-- Corps en costume -->
+  <rect x="70" y="110" width="60" height="80" fill="#2980b9"/>
+  <!-- Cravate -->
+  <polygon points="100,110 90,130 110,130" fill="#e74c3c" />
+  <!-- Bras pointant vers le tableau -->
+  <line x1="70" y1="130" x2="240" y2="100" stroke="#2980b9" stroke-width="10" stroke-linecap="round" />
+
+  <!-- Texte du logo -->
+  <text x="50" y="280" font-family="Arial, sans-serif" font-size="30" fill="#2c3e50">MOTTETMENTOR</text>
+</svg>
